--- a/Steckbrief/steckbrief_style.css
+++ b/Steckbrief/steckbrief_style.css
@@ -7,6 +7,8 @@ body {
 	background-repeat: no-repeat;
     background-position: center 60%;
 }
-p {
+a {
     color: white;
+    text-decoration: none;
+    line-height: 20px;
 }
