--- a/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
+++ b/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
@@ -3,8 +3,8 @@ body {
 }
 
 #wrapper {
-    align;
-    background-color: rgb(127, 212, 255);
+    
+    background-color: rgb(214, 214, 214);
     width: 1200px;
     display: grid;
     grid-template-columns: repeat(10, 1fr);
@@ -15,11 +15,13 @@ body {
 }
 
 .cards {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: large;
     border: solid black 1px; 
-    background-color: rgb(188, 125, 48);
+    background-color: rgb(0, 65, 129);
     height: 100px;
     width: 100px;
-    color: rgba(red, green, blue, 0.0);
+    color: rgba(255, 18, 18, 1);
 
     display: table-cell;
    
@@ -27,6 +29,15 @@ body {
     vertical-align: middle;
 }
 
+
 .cardsRevealed{
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 60px;
     color: black;
+}
+
+.dissapear{
+    background-color: rgba(0,0,0,0);
+
 }
