--- a/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
+++ b/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
@@ -14,7 +14,7 @@ body {
     
 }
 
-.cards {
+.faceDown {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
     border: solid black 1px; 
@@ -30,11 +30,12 @@ body {
 }
 
 
-.cardsRevealed{
+.faceUp{
     text-align: center;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 60px;
     color: black;
+    pointer-events: none;
 }
 
 .dissapear{
