--- a/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
+++ b/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
@@ -16,12 +16,12 @@ body {
 
 .faceDown {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: large;
+    font-size: 40px;
     border: solid black 1px; 
     background-color: rgb(0, 65, 129);
     height: 100px;
     width: 100px;
-    color: rgba(255, 18, 18, 1);
+    color: rgb(90, 255, 1);
 
     display: table-cell;
    
@@ -39,6 +39,7 @@ body {
 }
 
 .dissapear{
+    font-size: 20px;
     background-color: rgba(0,0,0,0);
 
 }
