--- a/Steckbrief/steckbrief_style.css
+++ b/Steckbrief/steckbrief_style.css
@@ -1,5 +1,5 @@
 body {
-	font-family: arial;
+	font-family: Arial, Helvetica, sans-serif;
 	font-size: small;
 	background: rgb(0, 162, 255);
 	background-image: url(/Steckbrief/2021-11-22_Linachtal.jpg);
