--- a/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
+++ b/L02_Event/L02.2_Memory_Robin/Memory_Robin.css
@@ -1,17 +1,37 @@
 body {
     margin: 0;
+    background-color: grey;
 }
 
 #wrapper {
     
-    background-color: rgb(214, 214, 214);
-    width: 1200px;
-    display: grid;
-    grid-template-columns: repeat(10, 1fr);
-    grid-auto-rows: 1fr;
-    grid-auto-flow: row;
-    grid-gap: 10px;  
     
+    
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-flow: row;
+    grid-gap: 10px;
+    grid-template-areas: 
+        ". form ."    
+        ". memory .";
+    
+}
+
+#memory {
+    grid-area: memory;
+
+    display: grid;
+    grid-template-columns: 100px 100px 100px 100px; 
+    grid-template-rows: 100px 100px ;
+    grid-gap: 10px;
+    place-self: center;
+    
+}
+
+#form {
+    grid-area: form;
+    color: white;
 }
 
 .faceDown {
