--- a/L02_Event/L02.2_Memory_Robin/Memory_Settings.css
+++ b/L02_Event/L02.2_Memory_Robin/Memory_Settings.css
@@ -11,7 +11,7 @@ body {
     grid-template-areas: 
         ". imgMemory ."
         ". formular  . "
-        ". start . ";
+        ". startBtn . ";
 
 }
 
@@ -43,7 +43,7 @@ body {
 }
 
 #start {
-    grid-area: start;
+    grid-area: startBtn;
     height: 50px;
     width: 200px;
     background-color: black;
@@ -52,6 +52,8 @@ body {
     border-radius: 20px;
     place-self: center;
     margin: 20px;
+    text-align: center;
+    text-decoration: none;
 }
 
 #start:active {
