--- a/L08.1_Canvas/generative_Art.css
+++ b/L08.1_Canvas/generative_Art.css
@@ -11,5 +11,6 @@ canvas {
     margin-right: auto;
     margin-top: 100px;
     display: block;
-    width: 1920px;
-    box-shadow: ;
+    /* width: 1920px#; */
+    
+}
