--- a/L08.2_CanvasStrand/CanvasStrand.css
+++ b/L08.2_CanvasStrand/CanvasStrand.css
@@ -9,8 +9,13 @@ canvas {
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    
     display: block;
     /* width: 1920px#; */
+
+    
+}
+
+#SliderX{
     
 }
