--- a/L08.2_CanvasStrand/CanvasStrand.css
+++ b/L08.2_CanvasStrand/CanvasStrand.css
@@ -4,20 +4,47 @@ body {
 
 canvas {
     border: 5px solid black;
-    /* background-color: rgb(0, 104, 104); */
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
     margin-right: auto;
-    
     display: block;
-    /* width: 1920px#; */
 
-    
 }
 
 a {
+    padding: 5px 10px 5px 10px;
+    border: none;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
+    margin: 10px 0 10px 15px;
+    background-color: gray;
+    color: white;
+    border-radius: 5px;
 }
 
+.font {
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    display: inline-block;
+    margin-left: 15px;
+}
+
+#reload {
+    margin-left: auto;
+    margin-right: auto;
+    position: absolute;
+    left: 80%;
+    top: 20px;
+    text-align: right;
+    background-color: gray;
+    color: white;
+    border-radius: 5px;
+    border: none;
+    padding: 5px;
+}
+
+#reload:active {
+    background-color: rgb(153, 153, 153);
+}
