--- a/L09_ClassCanvasStrand/CanvasBeach.css
+++ b/L09_ClassCanvasStrand/CanvasBeach.css
@@ -3,7 +3,7 @@ body {
 }
 
 canvas {
-    border: 5px solid black;
+    border: 50px solid rgb(255, 255, 255);
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
