--- a/L09_ClassCanvasStrand/CanvasBeach.css
+++ b/L09_ClassCanvasStrand/CanvasBeach.css
@@ -3,7 +3,7 @@ body {
 }
 
 canvas {
-    border: 50px solid rgb(255, 255, 255);
+    /* border: 50px solid rgb(255, 255, 255); */
     padding-left: 0;
     padding-right: 0;
     margin-left: auto;
@@ -48,3 +48,5 @@ a {
 #reload:active {
     background-color: rgb(153, 153, 153);
 }
+
+
