--- a/EIA_2_Endabgabe/style.css
+++ b/EIA_2_Endabgabe/style.css
@@ -26,7 +26,9 @@ span {
         " market BtnWater BtnHarvest statusBar ";
 
 }
-
+.hidden {
+    display: none;
+}
 #Fields {
     grid-area: fields;
     display: grid;
